Last commit didnt have the correct changes, moved views to lib/views and changed layout

--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -8,7 +8,15 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="span18 offset0 columns">
+            <div class="span3 offset0 columns">
+				<div id="page">
+                    <h1 class="title">Index</h1>
+                    <% for page in @pages do %>
+                        <li><a href="/<%= page[:link] %>"><%= page[:title] %></a></li>
+                    <% end %>
+                </div>
+            </div>
+			<div class="span18 offset3 columns">
 				<div id="page">
 					<h1 class="title"><%= '<a href="/">Home</a> &gt; ' if @name != "Home" %><%= @name %></h1>
 					
