--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -8,9 +8,9 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="span3 offset0 columns">
+            <div class="span3 offset0 columns" style="position:fixed; top:10px; left:2%;">
                 <div id="page">
-                    <h1 class="title">Index</h1>
+                    <h1 class="title">Menu</h1>
                     <% for page in @pages do %>
                         <li><a href="/<%= page[:link] %>"><%= page[:title] %></a></li>
                     <% end %>
@@ -29,7 +29,7 @@
                 <% end %>
                 </div>
             </div>
-            <div class="span18 offset3 columns">
+            <div class="span18 offset0 columns">
                 <div id="page">
                     <h1 class="title"><%= '<a href="/">Home</a> &gt; ' if @name != "Home" %><%= @name %></h1>
                     <% if @alert %>
